--- a/projeto-estacionamento/src/app/tab2/tab2.page.html
+++ b/projeto-estacionamento/src/app/tab2/tab2.page.html
@@ -6,13 +6,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-label>Entrada</ion-label>
+<ion-content class="ion-padding">
+    <ion-label>Entrada:</ion-label>
     <ion-datetime [(ngModel)]="pagamento.entrada" display-format="HH:mm"></ion-datetime>
-    <ion-label>Saida</ion-label>
+    <ion-label>Saida:</ion-label>
     <ion-datetime [(ngModel)]="pagamento.saida" display-format="HH:mm"></ion-datetime>
-    <ion-label>Total</ion-label>
-    <ion-input [(ngModel)]="pagamento.reais" value="R$ 0,00" disabled></ion-input>
-    <ion-button type="button" (click)="Calcular()" class="btn btn-primary">Calcular</ion-button>
-    <ion-button type="button" (click)="addIdea()" class="btn btn-primary">Pagar</ion-button>
+    <ion-button type="button" (click)="Calcular()" color="dark" size="small" expand="block">Calcular Total</ion-button>
+    <ion-label>Total:</ion-label>
+    <ion-input [(ngModel)]="pagamento.reais" value="R$ 0,00" disabled></ion-input> 
+    <ion-button type="button" (click)="addIdea()" color="dark" size="small" expand="block">Realizar Pagamento</ion-button>
 </ion-content>
