--- a/projeto-estacionamento/src/app/tabs/tabs.page.html
+++ b/projeto-estacionamento/src/app/tabs/tabs.page.html
@@ -3,16 +3,16 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Início</ion-label>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="logo-usd"></ion-icon>
+      <ion-icon name="cash"></ion-icon>
       <ion-label>Pagar</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="trending-up"></ion-icon>
+      <ion-icon name="list-box"></ion-icon>
       <ion-label>Pagamentos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
